--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
     <title>PlayStation Clone</title>
   </head>
   <body>
+    <div class="wrapper">
+      <!-- HEADER & NAV -->
+      <header class="header">
+        <nav class="navigation">
+          <a href="#!" class="logo">
+            <img src="/images/pslogo.png" alt="logo" />
+          </a>
+          <div class="links">
+            <a href="#!">Games</a>
+            <a href="#!">Hardware</a>
+            <a href="#!">Services</a>
+            <a href="#!">News</a>
+            <a href="#!">Shop</a>
+            <a href="#!">Help</a>
+            <a href="#!">My PlayStation</a>
+          </div>
+          <div class="navigation-right">
+            <input type="text" placeholder="Search" />
+            <a href="#!">
+              <i class="fas fa-search"></i>
+            </a>
+          </div>
+        </nav>
+      </header>
+      <!-- END OF HEADER & NAV -->
+    </div>
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
