--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
         </nav>
       </header>
       <!-- END OF HEADER & NAV -->
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-content">
+          <img src="/images/ps5logo.png" alt="ps5 logo" />
+          <h1>Play Has No Limits</h1>
+          <p>
+            Unleash new gaming possibilities that you never anticipated with
+            PlayStation 5.
+          </p>
+          <button class="btn-dark">Explore More</button>
+        </div>
+      </section>
+      <!-- END OF HERO -->
     </div>
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
