added features section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,84 @@
         </div>
       </section>
       <!-- END OF HERO -->
+      <!-- FEATURES -->
+      <section class="features">
+        <div class="features-heading">
+          <h4>Play Has No Limits</h4>
+          <h3>Introducing PlayStation 5</h3>
+          <p>Unleash new gaming possibilities that you never anticipated</p>
+        </div>
+        <div class="feature">
+          <div class="feature-info">
+            <h4>Experience A New Generation Of Gaming</h4>
+            <h3>PlayStation 5 Console</h3>
+            <p>
+              Experience an all-new generation of incredible PlayStation games.
+            </p>
+            <button class="btn-light">Learn More</button>
+          </div>
+          <div class="feature-img">
+            <img src="images/console.png" alt="console" />
+          </div>
+        </div>
+        <div class="feature">
+          <div class="feature-info">
+            <h4>Highten Your Senses</h4>
+            <h3>DualSense Wireless Controller</h3>
+            <p>
+              Experience immersive haptic feedback, dynamic adaptive triggers
+              and a built-in microphone.
+            </p>
+            <button class="btn-light">Learn More</button>
+          </div>
+          <div class="feature-img">
+            <img src="images/controller.png" alt="console" />
+          </div>
+        </div>
+        <div class="feature">
+          <div class="feature-info">
+            <h4>How Games Were Made To Sound</h4>
+            <h3>PULSE3D Wireless Headset</h3>
+            <p>
+              Enjoy a seamless wireless experience with a headset fine-tuned for
+              3D Audio.
+            </p>
+            <button class="btn-light">Learn More</button>
+          </div>
+          <div class="feature-img">
+            <img src="images/headphones.png" alt="console" />
+          </div>
+        </div>
+        <div class="feature">
+          <div class="feature-info">
+            <h4>Included With Your PS5</h4>
+            <h3>Media Remote</h3>
+            <p>
+              Conveniently control movies, streaming services and more on your
+              PS5 console with an intuitive layout.
+            </p>
+            <button class="btn-light">Learn More</button>
+          </div>
+          <div class="feature-img">
+            <img src="images/remote.png" alt="console" />
+          </div>
+        </div>
+        <div class="feature">
+          <div class="feature-info">
+            <h4>Included With Your PS5</h4>
+            <h3>HD Camera</h3>
+            <p>
+              Add yourself to your gameplay videos and broadcasts with smooth,
+              sharp, full-HD capture.
+            </p>
+            <button class="btn-light">Learn More</button>
+          </div>
+          <div class="feature-img">
+            <img src="images/camera.jpg" alt="console" />
+          </div>
+        </div>
+      </section>
+      <!-- END OF FEATURES -->
     </div>
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
