--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
           </div>
         </div>
         <div class="feature">
+          <div class="feature-img">
+            <img src="images/controller.png" alt="console" />
+          </div>
           <div class="feature-info">
             <h4>Highten Your Senses</h4>
             <h3>DualSense Wireless Controller</h3>
@@ -82,9 +85,6 @@
               and a built-in microphone.
             </p>
             <button class="btn-light">Learn More</button>
-          </div>
-          <div class="feature-img">
-            <img src="images/controller.png" alt="console" />
           </div>
         </div>
         <div class="feature">
@@ -102,6 +102,9 @@
           </div>
         </div>
         <div class="feature">
+          <div class="feature-img">
+            <img src="images/remote.png" alt="console" />
+          </div>
           <div class="feature-info">
             <h4>Included With Your PS5</h4>
             <h3>Media Remote</h3>
@@ -110,9 +113,6 @@
               PS5 console with an intuitive layout.
             </p>
             <button class="btn-light">Learn More</button>
-          </div>
-          <div class="feature-img">
-            <img src="images/remote.png" alt="console" />
           </div>
         </div>
         <div class="feature">
@@ -131,6 +131,48 @@
         </div>
       </section>
       <!-- END OF FEATURES -->
+      <!-- GAME SHOWCASE ONE -->
+      <section class="game-showcase">
+        <div class="game-showcase-content">
+          <h3>NBA 2K21</h3>
+          <p>Play the latest edition of NBA 2K</p>
+          <button class="btn-dark">Buy Now</button>
+        </div>
+      </section>
+      <!-- END OF GAME SHOWCASE ONE -->
+      <!-- GAMES -->
+      <section class="games">
+        <div class="games-content">
+          <h3>Great Games Out Now & Coming Soon</h3>
+          <div class="cards">
+            <a href="#!" class="card">
+              <img src="/images/card7.jpg" alt="card1" />
+              <p class="img-description">Buy Now | $59.99</p>
+            </a>
+            <a href="#!" class="card">
+              <img src="/images/card8.jpg" alt="card2" />
+              <p class="img-description">Buy Now | $49.99</p>
+            </a>
+            <a href="#!" class="card">
+              <img src="/images/card3.jpg" alt="card3" />
+              <p class="img-description">Buy Now | $39.99</p>
+            </a>
+            <a href="#!" class="card">
+              <img src="/images/card4.jpg" alt="card4" />
+              <p class="img-description">Buy Now | $59.99</p>
+            </a>
+            <a href="#!" class="card">
+              <img src="/images/sackboy.jpg" alt="card5" />
+              <p class="img-description">Buy Now | $39.99</p>
+            </a>
+            <a href="#!" class="card">
+              <img src="/images/card6.jpg" alt="card6" />
+              <p class="img-description">Buy Now | $49.99</p>
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- END OF GAMES -->
     </div>
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
