--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </header>
       <!-- END OF HEADER & NAV -->
       <!-- HERO -->
-      <section class="hero">
+      <section class="hero" data-aos="slide-down">
         <div class="hero-content">
           <img src="/images/ps5logo.png" alt="ps5 logo" />
           <h1>Play Has No Limits</h1>
@@ -60,7 +60,7 @@
           <h3>Introducing PlayStation 5</h3>
           <p>Unleash new gaming possibilities that you never anticipated</p>
         </div>
-        <div class="feature">
+        <div class="feature" data-aos="fade-left">
           <div class="feature-info">
             <h4>Experience A New Generation Of Gaming</h4>
             <h3>PlayStation 5 Console</h3>
@@ -73,7 +73,7 @@
             <img src="images/console.png" alt="console" />
           </div>
         </div>
-        <div class="feature">
+        <div class="feature" data-aos="fade-right">
           <div class="feature-img">
             <img src="images/controller.png" alt="console" />
           </div>
@@ -87,7 +87,7 @@
             <button class="btn-light">Learn More</button>
           </div>
         </div>
-        <div class="feature">
+        <div class="feature" data-aos="fade-left">
           <div class="feature-info">
             <h4>How Games Were Made To Sound</h4>
             <h3>PULSE3D Wireless Headset</h3>
@@ -101,7 +101,7 @@
             <img src="images/headphones.png" alt="console" />
           </div>
         </div>
-        <div class="feature">
+        <div class="feature" data-aos="fade-right">
           <div class="feature-img">
             <img src="images/remote.png" alt="console" />
           </div>
@@ -115,7 +115,7 @@
             <button class="btn-light">Learn More</button>
           </div>
         </div>
-        <div class="feature">
+        <div class="feature" data-aos="fade-left">
           <div class="feature-info">
             <h4>Included With Your PS5</h4>
             <h3>HD Camera</h3>
@@ -132,8 +132,8 @@
       </section>
       <!-- END OF FEATURES -->
       <!-- GAME SHOWCASE ONE -->
-      <section class="game-showcase">
-        <div class="game-showcase-content">
+      <section class="game-showcase" data-aos="zoom-in">
+        <div class="game-showcase-content" data-aos="fade-down">
           <h3>NBA 2K21</h3>
           <p>Play the latest edition of NBA 2K</p>
           <button class="btn-dark">Buy Now</button>
@@ -144,7 +144,7 @@
       <section class="games">
         <div class="games-content">
           <h3>Great Games Out Now & Coming Soon</h3>
-          <div class="cards">
+          <div class="cards" data-aos="fade-up">
             <a href="#!" class="card">
               <img src="/images/card7.jpg" alt="card1" />
               <p class="img-description">Buy Now | $59.99</p>
@@ -177,7 +177,10 @@
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        offset: 400,
+        duration: 1000,
+      });
     </script>
   </body>
 </html>
