--- a/index.html
+++ b/index.html
@@ -53,126 +53,151 @@
         </div>
       </section>
       <!-- END OF HERO -->
-      <!-- FEATURES -->
-      <section class="features">
-        <div class="features-heading">
-          <h4>Play Has No Limits</h4>
-          <h3>Introducing PlayStation 5</h3>
-          <p>Unleash new gaming possibilities that you never anticipated</p>
-        </div>
-        <div class="feature" data-aos="fade-left">
-          <div class="feature-info">
-            <h4>Experience A New Generation Of Gaming</h4>
-            <h3>PlayStation 5 Console</h3>
-            <p>
-              Experience an all-new generation of incredible PlayStation games.
-            </p>
-            <button class="btn-light">Learn More</button>
+      <main>
+        <!-- FEATURES -->
+        <section class="features">
+          <div class="features-heading">
+            <h4>Play Has No Limits</h4>
+            <h3>Introducing PlayStation 5</h3>
+            <p>Unleash new gaming possibilities that you never anticipated</p>
           </div>
-          <div class="feature-img">
-            <img src="images/console.png" alt="console" />
+          <div class="feature" data-aos="fade-left">
+            <div class="feature-info">
+              <h4>Experience A New Generation Of Gaming</h4>
+              <h3>PlayStation 5 Console</h3>
+              <p>
+                Experience an all-new generation of incredible PlayStation
+                games.
+              </p>
+              <button class="btn-light">Learn More</button>
+            </div>
+            <div class="feature-img">
+              <img src="images/console.png" alt="console" />
+            </div>
           </div>
-        </div>
-        <div class="feature" data-aos="fade-right">
-          <div class="feature-img">
-            <img src="images/controller.png" alt="console" />
+          <div class="feature" data-aos="fade-right">
+            <div class="feature-img">
+              <img src="images/controller.png" alt="console" />
+            </div>
+            <div class="feature-info">
+              <h4>Highten Your Senses</h4>
+              <h3>DualSense Wireless Controller</h3>
+              <p>
+                Experience immersive haptic feedback, dynamic adaptive triggers
+                and a built-in microphone.
+              </p>
+              <button class="btn-light">Learn More</button>
+            </div>
           </div>
-          <div class="feature-info">
-            <h4>Highten Your Senses</h4>
-            <h3>DualSense Wireless Controller</h3>
-            <p>
-              Experience immersive haptic feedback, dynamic adaptive triggers
-              and a built-in microphone.
-            </p>
-            <button class="btn-light">Learn More</button>
+          <div class="feature" data-aos="fade-left">
+            <div class="feature-info">
+              <h4>How Games Were Made To Sound</h4>
+              <h3>PULSE3D Wireless Headset</h3>
+              <p>
+                Enjoy a seamless wireless experience with a headset fine-tuned
+                for 3D Audio.
+              </p>
+              <button class="btn-light">Learn More</button>
+            </div>
+            <div class="feature-img">
+              <img src="images/headphones.png" alt="console" />
+            </div>
           </div>
-        </div>
-        <div class="feature" data-aos="fade-left">
-          <div class="feature-info">
-            <h4>How Games Were Made To Sound</h4>
-            <h3>PULSE3D Wireless Headset</h3>
-            <p>
-              Enjoy a seamless wireless experience with a headset fine-tuned for
-              3D Audio.
-            </p>
-            <button class="btn-light">Learn More</button>
+          <div class="feature" data-aos="fade-right">
+            <div class="feature-img">
+              <img src="images/remote.png" alt="console" />
+            </div>
+            <div class="feature-info">
+              <h4>Included With Your PS5</h4>
+              <h3>Media Remote</h3>
+              <p>
+                Conveniently control movies, streaming services and more on your
+                PS5 console with an intuitive layout.
+              </p>
+              <button class="btn-light">Learn More</button>
+            </div>
           </div>
-          <div class="feature-img">
-            <img src="images/headphones.png" alt="console" />
+          <div class="feature" data-aos="fade-left">
+            <div class="feature-info">
+              <h4>Included With Your PS5</h4>
+              <h3>HD Camera</h3>
+              <p>
+                Add yourself to your gameplay videos and broadcasts with smooth,
+                sharp, full-HD capture.
+              </p>
+              <button class="btn-light">Learn More</button>
+            </div>
+            <div class="feature-img">
+              <img src="images/camera.jpg" alt="console" />
+            </div>
           </div>
-        </div>
-        <div class="feature" data-aos="fade-right">
-          <div class="feature-img">
-            <img src="images/remote.png" alt="console" />
+        </section>
+        <!-- END OF FEATURES -->
+        <!-- GAME SHOWCASE ONE -->
+        <section class="game-showcase" data-aos="zoom-in">
+          <div class="game-showcase-content" data-aos="fade-down">
+            <h3>NBA 2K21</h3>
+            <p>Play the latest edition of NBA 2K</p>
+            <button class="btn-dark">Buy Now</button>
           </div>
-          <div class="feature-info">
-            <h4>Included With Your PS5</h4>
-            <h3>Media Remote</h3>
-            <p>
-              Conveniently control movies, streaming services and more on your
-              PS5 console with an intuitive layout.
-            </p>
-            <button class="btn-light">Learn More</button>
+        </section>
+        <!-- END OF GAME SHOWCASE ONE -->
+        <!-- GAMES -->
+        <section class="games">
+          <div class="games-content">
+            <h3>Great Games Out Now & Coming Soon</h3>
+            <div class="cards" data-aos="fade-up">
+              <a href="#!" class="card">
+                <img src="/images/card7.jpg" alt="card1" />
+                <p class="img-description">Buy Now | $59.99</p>
+              </a>
+              <a href="#!" class="card">
+                <img src="/images/card8.jpg" alt="card2" />
+                <p class="img-description">Buy Now | $49.99</p>
+              </a>
+              <a href="#!" class="card">
+                <img src="/images/card3.jpg" alt="card3" />
+                <p class="img-description">Buy Now | $39.99</p>
+              </a>
+              <a href="#!" class="card">
+                <img src="/images/card4.jpg" alt="card4" />
+                <p class="img-description">Buy Now | $59.99</p>
+              </a>
+              <a href="#!" class="card">
+                <img src="/images/sackboy.jpg" alt="card5" />
+                <p class="img-description">Buy Now | $39.99</p>
+              </a>
+              <a href="#!" class="card">
+                <img src="/images/card6.jpg" alt="card6" />
+                <p class="img-description">Buy Now | $49.99</p>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="feature" data-aos="fade-left">
-          <div class="feature-info">
-            <h4>Included With Your PS5</h4>
-            <h3>HD Camera</h3>
-            <p>
-              Add yourself to your gameplay videos and broadcasts with smooth,
-              sharp, full-HD capture.
-            </p>
-            <button class="btn-light">Learn More</button>
+        </section>
+        <!-- END OF GAMES -->
+        <!-- CLASSICS -->
+        <section class="classics">
+          <h2>Explore The Classics</h2>
+          <p>Your choice of power. The same amazing games & entertainment</p>
+          <div class="classics-content">
+            <div class="classic" data-aos="fade-right">
+              <img src="/images/ps4.png" alt="ps4" />
+              <h3>PlayStation 4</h3>
+              <p>Incredible games live on PS4, with 1TB storage.</p>
+              <small>Vertical stand sold separately</small>
+              <button class="btn-light">Bundles & Systems</button>
+            </div>
+            <div class="classic" data-aos="fade-left">
+              <img src="/images/ps4pro.png" alt="ps4pro" />
+              <h3>PlayStation 4 Pro</h3>
+              <p>4K-gaming and entertainment with vibrant HDR1</p>
+              <small>Vertical stand sold separately</small>
+              <button class="btn-light">Bundles & Systems</button>
+            </div>
           </div>
-          <div class="feature-img">
-            <img src="images/camera.jpg" alt="console" />
-          </div>
-        </div>
-      </section>
-      <!-- END OF FEATURES -->
-      <!-- GAME SHOWCASE ONE -->
-      <section class="game-showcase" data-aos="zoom-in">
-        <div class="game-showcase-content" data-aos="fade-down">
-          <h3>NBA 2K21</h3>
-          <p>Play the latest edition of NBA 2K</p>
-          <button class="btn-dark">Buy Now</button>
-        </div>
-      </section>
-      <!-- END OF GAME SHOWCASE ONE -->
-      <!-- GAMES -->
-      <section class="games">
-        <div class="games-content">
-          <h3>Great Games Out Now & Coming Soon</h3>
-          <div class="cards" data-aos="fade-up">
-            <a href="#!" class="card">
-              <img src="/images/card7.jpg" alt="card1" />
-              <p class="img-description">Buy Now | $59.99</p>
-            </a>
-            <a href="#!" class="card">
-              <img src="/images/card8.jpg" alt="card2" />
-              <p class="img-description">Buy Now | $49.99</p>
-            </a>
-            <a href="#!" class="card">
-              <img src="/images/card3.jpg" alt="card3" />
-              <p class="img-description">Buy Now | $39.99</p>
-            </a>
-            <a href="#!" class="card">
-              <img src="/images/card4.jpg" alt="card4" />
-              <p class="img-description">Buy Now | $59.99</p>
-            </a>
-            <a href="#!" class="card">
-              <img src="/images/sackboy.jpg" alt="card5" />
-              <p class="img-description">Buy Now | $39.99</p>
-            </a>
-            <a href="#!" class="card">
-              <img src="/images/card6.jpg" alt="card6" />
-              <p class="img-description">Buy Now | $49.99</p>
-            </a>
-          </div>
-        </div>
-      </section>
-      <!-- END OF GAMES -->
+        </section>
+        <!-- END OF CLASSICS -->
+      </main>
     </div>
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
