--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@
           </div>
         </section>
         <!-- END OF CLASSICS -->
+        <!-- GAME SHOWCASE TWO -->
+        <section class="game-showcase-2" data-aos="zoom-in">
+          <div class="game-showcase-content" data-aos="fade-down">
+            <img src="/images/" alt="" />
+            <h3>Get The PlayStation Pass</h3>
+            <p>Play classic PlayStation games as far back as PS3!</p>
+            <button class="btn-dark">Buy Now</button>
+          </div>
+        </section>
+        <!-- END OF GAME SHOWCASE TWO -->
       </main>
     </div>
     <script src="js/app.js"></script>
