added store links section

--- a/index.html
+++ b/index.html
@@ -207,6 +207,34 @@
           </div>
         </section>
         <!-- END OF GAME SHOWCASE TWO -->
+        <!-- STORE LINKS -->
+        <section class="store" data-aos="fade-up">
+          <div class="store-link">
+            <a href="#!" class="store-link">
+              <i class="fas fa-headset"></i>
+            </a>
+            <p>Game Accessories</p>
+          </div>
+          <div class="store-link">
+            <a href="#!">
+              <i class="fas fa-tshirt"></i>
+            </a>
+            <p>PlayStation Merch</p>
+          </div>
+          <div class="store-link">
+            <a href="#!">
+              <i class="fas fa-tags"></i>
+            </a>
+            <p>New Deals</p>
+          </div>
+          <div class="store-link">
+            <a href="#!">
+              <i class="fas fa-gamepad"></i>
+            </a>
+            <p>Free To Play</p>
+          </div>
+        </section>
+        <!-- END OF STORE LINKS -->
       </main>
     </div>
     <script src="js/app.js"></script>
