--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </header>
       <!-- END OF HEADER & NAV -->
       <!-- HERO -->
-      <section class="hero" data-aos="slide-down">
+      <section class="hero">
         <div class="hero-content">
           <img src="/images/ps5logo.png" alt="ps5 logo" />
           <h1>Play Has No Limits</h1>
@@ -236,6 +236,67 @@
         </section>
         <!-- END OF STORE LINKS -->
       </main>
+      <!-- FOOTER -->
+      <footer class="footer">
+        <div class="footer-top">
+          <div class="link-col">
+            <h4>More Info</h4>
+            <ul>
+              <li><a href="#!">Support</a></li>
+              <li><a href="#!">Privacy Policy</a></li>
+              <li><a href="#!">Terms of Use</a></li>
+              <li><a href="#!">Site Map</a></li>
+              <li><a href="#!">Worldwide Studios</a></li>
+              <li><a href="#!">Legal</a></li>
+              <li><a href="#!">About SIE</a></li>
+              <li><a href="#!">Terms of Service</a></li>
+              <li><a href="#!">Cancellation</a></li>
+              <li><a href="#!">Health Warning</a></li>
+              <li><a href="#!">About Ratings</a></li>
+            </ul>
+          </div>
+          <div class="link-col">
+            <h4>Company</h4>
+            <ul>
+              <li><a href="#!">Press Release</a></li>
+              <li>
+                <a href="#!">Modern Slavery Transparency Act Statement</a>
+              </li>
+              <li><a href="#!">Developers</a></li>
+              <li><a href="#!">Careers</a></li>
+              <li><a href="#!">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="link-col">
+            <h4>Social</h4>
+            <ul>
+              <li><a href="#!">Facebook</a></li>
+              <li><a href="#!">Twitter</a></li>
+              <li><a href="#!">Youtube</a></li>
+              <li><a href="#!">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <img src="/images/pslogo.png" alt="pslogo" />
+          <p>&copy; Based on Sony's PlayStation Web Page. Coded By HabibDev</p>
+          <div class="bottom-links">
+            <a href="#!">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#!">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#!">
+              <i class="fab fa-youtube"></i>
+            </a>
+            <a href="#!">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+        </div>
+      </footer>
+      <!-- END OF FOOTER -->
     </div>
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
