made project responsive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </header>
       <!-- END OF HEADER & NAV -->
       <!-- HERO -->
-      <section class="hero">
+      <section class="hero" data-aos="slide-down">
         <div class="hero-content">
           <img src="/images/ps5logo.png" alt="ps5 logo" />
           <h1>Play Has No Limits</h1>
@@ -52,6 +52,7 @@
           <button class="btn-dark">Explore More</button>
         </div>
       </section>
+
       <!-- END OF HERO -->
       <main>
         <!-- FEATURES -->
@@ -164,7 +165,7 @@
                 <p class="img-description">Buy Now | $59.99</p>
               </a>
               <a href="#!" class="card">
-                <img src="/images/sackboy.jpg" alt="card5" />
+                <img src="/images/card5.jpg" alt="card5" />
                 <p class="img-description">Buy Now | $39.99</p>
               </a>
               <a href="#!" class="card">
