added back to top button

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <title>PlayStation Clone</title>
   </head>
   <body>
+    <!-- TODO add hamburger menu | add scroll to top icon -->
     <div class="wrapper">
       <!-- HEADER & NAV -->
-      <header class="header">
+      <header class="header" id="home">
         <nav class="navigation">
           <a href="#!" class="logo">
             <img src="/images/pslogo.png" alt="logo" />
@@ -52,8 +53,12 @@
           <button class="btn-dark">Explore More</button>
         </div>
       </section>
-
       <!-- END OF HERO -->
+      <!-- BACK TO TOP BUTTON -->
+      <a href="#home" class="goToTopBtn">
+        <i class="fas fa-arrow-circle-up"></i>
+      </a>
+      <!-- END OF BACK TO TOP BUTTON -->
       <main>
         <!-- FEATURES -->
         <section class="features">
