added hamburger menu

--- a/index.html
+++ b/index.html
@@ -15,8 +15,39 @@
     <title>PlayStation Clone</title>
   </head>
   <body>
-    <!-- TODO add hamburger menu | add scroll to top icon -->
     <div class="wrapper">
+      <!-- HAMBURGER MENU -->
+      <div class="menu-navbar">
+        <div class="hamburger-menu">
+          <div class="line line1"></div>
+          <div class="line line2"></div>
+          <div class="line line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#!" class="nav-link">Games</a>
+          </li>
+          <li class="nav-item">
+            <a href="#!" class="nav-link">Hardware</a>
+          </li>
+          <li class="nav-item">
+            <a href="#!" class="nav-link">Services</a>
+          </li>
+          <li class="nav-item">
+            <a href="#!" class="nav-link">News</a>
+          </li>
+          <li class="nav-item">
+            <a href="#!" class="nav-link">Shop</a>
+          </li>
+          <li class="nav-item">
+            <a href="#!" class="nav-link">Help</a>
+          </li>
+          <li class="nav-item">
+            <a href="#!" class="nav-link">My PlayStation</a>
+          </li>
+        </ul>
+      </div>
+      <!-- END OF HAMBURGER MENU -->
       <!-- HEADER & NAV -->
       <header class="header" id="home">
         <nav class="navigation">
